# storm-backend

./: .gitignore  Cargo.toml  LICENSE.md  README.md  flake.nix
.github/workflows/: cachix.yml
src/: main.rs  utils.rs
src/routes/: mod.rs
src/services/: analytics.rs  discord.rs  mailer.rs  mod.rs
src/services/mailer/: mod.rs
src/services/mailer/templates/: confirmation_fr.html.jinja
src/stripe/: errors.rs  mod.rs
