[package]
name = "storm-backend"
description = "STORM server fonctions"
authors = ["gaspard@gasdev.fr"]
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
clap = { version = "4.6", features = ["derive"] }
async-stripe-core = { version = "1.0.0-rc.6", features = [
  "deserialize",
  "event",
] }
