[package]
name = "storm-backend"
description = "STORM server fonctions"
authors = ["gaspard@gasdev.fr"]
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
clap = { version = "4.6", features = ["derive"] }
async-stripe-webhook = { version = "1.0.0-rc.6", features = [
  "async-stripe-checkout",
] }
async-stripe-shared = { version = "1.0.0-rc.6", features = ["serialize"] }
reqwest = { version = "0.13", features = ["json"] }
serde_json = "1.0"
lettre = { version = "0.11.22", default-features = false, features = ["builder", "hostname", "pool", "smtp-transport", "tokio1-rustls"] }
